# notminecraft

./: .gitignore  Cargo.toml  README.md  book.toml  graph.py  shaderc.sh  shell.nix  steve-client.csv  steve-server.csv
asset-test/: .gitignore  Cargo.toml
asset-test/src/: main.rs
get_assets/: .gitignore  Cargo.toml
get_assets/src/: bin.rs  fs_util.rs  glob.rs  http_util.rs  lib.rs  name.rs
get_assets/src/download/: jar.rs
get_assets/src/download/index/: deser.rs  mod.rs
graphics/: Cargo.toml  architecture.odt
graphics/examples/: example.rs
graphics/src/: bin.rs  draw_command_encoder.rs  draw_program.rs  frame_content.rs  lib.rs  modifier.rs  render_instrs.rs  shader.frag  shader.rs  shader.vert  shader.vert.spv  std140.rs  transform2d.rs  uniform_buffer.rs  vertex.rs  view_proj.rs
graphics/src/assets/: test.html
graphics/src/pipelines/: _image.rs  _solid.rs  _text.rs  clear.rs  clear_depth.rs  clip.rs  finish.rs  image.rs  mesh.rs  mod.rs  sky.rs  solid.rs  text.rs
graphics/src/resources/: gpu_image.rs
graphics/src/shaders/: _image.frag  _image.vert  _solid.frag  _solid.vert  clear.frag  clear.frag.spv  clip_edit.frag  clip_edit.frag.spv  clip_edit.vert  clip_edit.vert.spv  common_frag.glsl  common_vert.glsl  finish.frag  image.frag  image.frag.spv  image.vert  image.vert.spv  invert.frag  invert.frag.spv  invert.vert  invert.vert.spv  line.frag  line.frag.spv  line.vert  line.vert.spv  mc_shading.txt  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  shader.vert  sky.frag  sky.frag.spv  sky.vert  sky.vert.spv  solid.frag  solid.frag.spv  solid.vert  solid.vert.spv  text.frag  (+3 more)
graphics/src/shaders_spirv/: clip_edit.frag.spv  invert.vert.spv  line.vert.spv  text.frag.spv
minecraft/: Cargo.toml
minecraft/src/: basic_demo.rs  chunk_mesh.rs  font_437.rs  game.rs  game_binschema.rs  game_old.rs  jar_assets.rs  lib.rs  localization.rs  main.rs  main_menu.rs  message.rs  resource_pack.rs  settings.rs  sound.rs  text_test.rs  thread_pool.rs
minecraft/src/asset/: jar_acquire.rs  jar_assets.rs  jar_reader.rs  loader.rs  localization.rs  meshes.rs  mod.rs  resource_pack.rs  sound.rs
minecraft/src/chunk/: block.rs  hash_map_3d.rs  loaded.rs  ltc.rs  mod.rs  nice_api.rs  per_chunk.rs  per_tile.rs  per_tile_packed.rs  per_tile_sparse.rs
minecraft/src/chunk_mesh/: differ.rs  mod.rs
minecraft/src/client/: apply_edit.rs  chunk_mesher.rs  connection.rs  menu.rs  mod.rs  movement.rs  prediction.rs
minecraft/src/client/gui_blocks/: chat.rs  crosshair.rs  mod.rs  single_chest_bg.rs  vignette.rs  world.rs
minecraft/src/client/item_grid/: mod.rs
minecraft/src/client/menu/: chat_input.rs  esc_menu.rs  inventory.rs  mod.rs  settings.rs
minecraft/src/client/meshing/: char_mesh.rs  chunk_mesher.rs  item_mesh.rs  mod.rs  stars_mesh.rs
minecraft/src/client_server/: message.rs  mod.rs
minecraft/src/client_server/client/: apply_edit.rs  chunk_mesher.rs  connection.rs  edit.rs  mod.rs  prediction.rs  tile_meshing.rs
minecraft/src/client_server/message/: mod.rs  transcode_vek.rs
minecraft/src/client_server/server/: buffer_pool.rs  chunk_loader.rs  chunk_manager.rs  connection.rs  event.rs  mod.rs  per_connection.rs  server_event.rs
minecraft/src/game/: mod.rs
minecraft/src/game_data/: mod.rs  per_block.rs  per_item.rs
minecraft/src/game_data/blocks/: door.rs  log.rs  mod.rs
minecraft/src/game_data/content/: chest.rs  mod.rs  stone.rs
minecraft/src/game_data/logic/: item_mesh_logic.rs  mesh_logic.rs  mod.rs  physics_logic.rs  transclone_logic.rs
minecraft/src/gui/: clipboard.rs  context.rs  event.rs  fps_overlay.rs  gui_event_loop.rs  mod.rs  node.rs  state_frame.rs  state_frame_obj.rs  system.txt  visitor.rs
minecraft/src/gui/block/: axis_swap.rs  center.rs  cursor_is_over_tracker.rs  dim_constraint.rs  flow.txt  gui_block.rs  gui_block_seq.rs  layer.rs  margin.rs  mod.rs  modifier.rs  sized_gui_block_seq_flatten.rs  stable_unscaled_dim_size.rs  stack.rs  text.rs  tile_9.rs  tile_image.rs
minecraft/src/gui/blocks/: align.rs  array_map_gui_block_seq.rs  axis_swap.rs  before_after.rs  gap.rs  gui_block_seq_chain.rs  identity_maperator.rs  image.rs  layer.rs  logical_size.rs  logical_translate.rs  margin.rs  mod.rs  modify.rs  mouse_capturer.rs  pad.rs  relative.rs  simple_gui_block.rs  solid.rs  stack.rs  stack_auto.rs  text.rs  tile_9.rs  tile_image.rs
minecraft/src/item/: erased.rs  mod.rs  slots.rs
minecraft/src/menu/: about.rs  about.txt  main_menu.rs  mod.rs  multiplayer_menu.rs
minecraft/src/physics/: aa_box.rs  looking_at.rs  mod.rs  world_geometry.rs
minecraft/src/physics/collision/: aa_box_face.rs
minecraft/src/save_file/: content.rs  entry.rs  mod.rs
minecraft/src/server/: chunk_loader.rs  mod.rs
minecraft/src/server/chunk_manager/: mod.rs
minecraft/src/singleplayer/: block_update_queue.rs  chunk_loader.rs  looking_at.rs  mod.rs  movement.rs  physics.rs  tile_meshing.rs
minecraft/src/singleplayer/blocks/: door.rs  grass.rs  mod.rs
minecraft/src/singleplayer/physics/: aa_box.rs  do_physics.rs  looking_at.rs  mod.rs  world_geometry.rs
minecraft/src/singleplayer/physics2/: aa_box.rs  do_physics.rs  world_geometry.rs
minecraft/src/systems/: mod.rs
minecraft/src/ui/: center_block.rs  h_center.rs  layer_block.rs  margin_block.rs  menu_button.rs  mod.rs  stack_block.rs  text.rs  tile_9.rs  v_center.rs  v_stack.rs
minecraft/src/ui2/: center_block.rs  layer_block.rs  margin_block.rs  mod.rs  stable_unscaled_size_block.rs  text.rs  text_block.rs  tile_9_block.rs  tile_block.rs
minecraft/src/util/: array.rs  chunk_range.rs  mod.rs  number_key.rs  quad_mesh.rs  secs_rem.rs  sparse_flags.rs  sparse_vec.rs
winit-main/: Cargo.toml
winit-main/examples/: winit_readme.rs
winit-main/src/: lib.rs  request.rs
workspace/: Cargo.toml
workspace/binschema/src/: var_len.rs
workspace/chunk_data/src/: nice_api.rs  per_tile_packed.rs
workspace/graphics/src/: frame_content.rs  shader.rs  vertex.rs  view_proj.rs
workspace/minecraft/src/: main.rs  sound.rs
workspace/opentype437/src/: lib.rs
workspace/slab/src/: lib.rs
(+146 files in other folders)
