[workspace]
members = [
    "opentype437",
    "graphics",
    "chunk_data",
    "mesh_data",
    "get_assets",
    "minecraft",
    "binschema",
    "binschema_derive"
]
resolver = "2"

[patch.crates-io]
ab_glyph = { path = "ab_glyph" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
