[package]
name = "asset-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]
