[package]
name = "get_assets"
version = "0.1.0"
edition = "2021"

[lib]
name = "get_assets"
path = "src/lib.rs"

[[bin]]
name = "get_assets"
path = "src/bin.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
zip = "0.6.4"
reqwest = "0.11"
serde_json = "1"
url = "2"
bytes = "1"

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
