[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphics"
path  = "src/lib.rs"

[[bin]]
name = "graphics"
path = "src/bin.rs"

[dependencies]
tracing = "0.1"
anyhow = "1"

[dependencies.winit-main]
path = "../winit-main"

[dependencies.wgpu]
version = "0.12"
features = ["spirv"]