[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphics"
path  = "src/lib.rs"

[[bin]]
name = "graphics"
path = "src/bin.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
shaderc = "0.7"

[dependencies.winit-main]
path = "../winit-main"

[dependencies.wgpu]
version = "0.12"
features = ["spirv"]

[dependencies.tokio]
version = "1"
features = ["fs"]