[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphics"
path  = "src/lib.rs"

[[bin]]
name = "graphics"
path = "src/bin.rs"

[dependencies]
tracing = "0.1"
shaderc = "0.7"
vek = "0.15"
image = "0.24"
backtrace = "0.3"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.winit-main]
path = "../winit-main"

[dependencies.wgpu]
version = "0.12"
features = ["spirv"]

[dependencies.tokio]
version = "1"
features = ["fs"]