[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
vek = "0.15"
backtrace = "0.3"
async_zip = "0.0.6"
image = "0.24"
rand = "0.8"
rand_pcg = "0.3"

[dependencies.graphics]
path = "../graphics"

[dependencies.winit-main]
path = "../winit-main"

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.tokio]
version = "1"
features = ["time"]
