[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"
default-run = "minecraft"

[dependencies]
tracing = "0.1"
vek = "0.15"
backtrace = "0.3"
async_zip = "0.0.9"
image = "0.24"
rand = "0.8"
rand_pcg = "0.3"
winit = "0.28"
pollster = "0.2"
futures-util = "0.3"
slab = "0.4"
rand_chacha = "0.3"
num_cpus = "1"
crossbeam-channel = "0.5"
std-semaphore = "0.1"
bracket-noise = "0.8"
serde = "1"
bincode = "1"
rodio = "0.16"
spin = "0.9"
rocksdb = "0.21"

[dependencies.graphics]
path = "../graphics"

[dependencies.chunk_data]
path = "../chunk_data"

[dependencies.mesh_data]
path = "../mesh_data"

[dependencies.get_assets]
path = "../get_assets"

[dependencies.binschema]
path = "../binschema"

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.tokio]
version = "1"
features = ["time", "io-std", "rt", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11"
features = ["stream"]
