[workspace]
members = [
    "opentype437",
    "graphics",
    "chunk_data",
    "mesh_data",
    "get_assets",
    "minecraft",
    "binschema",
    "game_binschema_derive",
]
resolver = "2"

[patch.crates-io]
ab_glyph = { path = "ab_glyph" }
slab = { path = "slab" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
